welcome.lessons.welcome.bat.bool2.GreenTicket.scala.error
greenTicket:7: error: value unary_! is not a member of Int
	else if ((a==b && !a==c) || (a==c && !b==c) || (b==c && !a==c))
                          ^